# ros_spatial_utils

./: CMakeLists.txt  README.md  package.xml
include/ros_spatial_utils/: angles.h  distance_calculator.h  map.h  map_base.h  map_state.h  map_types.h  pose_2d.h  scaled_map.h  utils.h
src/ros_spatial_utils/: distance_calculator.cpp  map.cpp  map_base.cpp  pose_2d.cpp
test/ros_spatial_utils/: test_distance_calculator.cpp  test_map.cpp  test_pose_2d.cpp  test_scaled_map.cpp  test_utils.cpp
